CHANGES
=======

* Will the real Ross M Karchner please stand up
* update setup.cfg to point to README.rst
* Update README.rst
* converted README to ReStructured Text
* Update README.md
* App name (first argument in Flask.__init__) needs

0.3
---

* Update tox.ini

0.2
---

* fixed the cli tool to work in Python3, and moved some requitements around to avoid Python2.6-specific configs
* Update .travis.yml
* Update README.md
* Update README.md
* Test coverage to 100%
* Porting sheer code over to ss, extending tests, improving quality
* I am the antipattern
* Removed silly placeholder test
* Added configuration system, with tests
* Update README.md
* Update README.md
* renaming travis.yaml to travis.yml
* Added coverage to our testing setup, and a config for travis-ci
* added a version number
* Deleting OSWG template changelog, in favor of the one generated by PBR:
* updated changelog
* Moved sphinx stuff into /docs, did some setup work for tox
* Creating initial project structure
* Deleted swp file
* initial commit