@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Initial implementation of static site building
 * Will the real Ross M Karchner please stand up
 * update setup.cfg to point to README.rst
 * Update README.rst
